--- a/Taijitan/src/gui/Activities.fxml
+++ b/Taijitan/src/gui/Activities.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="758.0" prefWidth="1041.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="872.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="56.0" layoutY="31.0" prefHeight="654.0" prefWidth="929.0" spacing="30.0">
+      <VBox alignment="TOP_CENTER" layoutX="56.0" layoutY="31.0" prefHeight="711.0" prefWidth="783.0" spacing="30.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="71.0" prefWidth="394.0" text="Activiteiten" textAlignment="CENTER" textFill="#336566">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="71.0" prefWidth="867.0" text="Activiteiten" textAlignment="CENTER" textFill="#336566">
                <font>
                   <Font name="System Bold" size="48.0" />
                </font>
@@ -66,37 +66,37 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <JFXDatePicker fx:id="dtmStart" prefHeight="29.0" prefWidth="718.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <JFXDatePicker fx:id="dtmEnd" prefHeight="29.0" prefWidth="583.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <JFXComboBox fx:id="cboType" prefHeight="27.0" prefWidth="569.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <JFXDatePicker fx:id="dtmStart" defaultColor="#336566" prefHeight="29.0" prefWidth="718.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <JFXDatePicker fx:id="dtmEnd" defaultColor="#336566" prefHeight="29.0" prefWidth="583.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <JFXComboBox fx:id="cboType" focusColor="#336566" prefHeight="27.0" prefWidth="569.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
             </GridPane>
-            <GridPane prefHeight="305.0" prefWidth="903.0">
+            <GridPane prefHeight="366.0" prefWidth="783.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="148.18180602522924" minHeight="10.0" prefHeight="26.872723993979236" valignment="CENTER" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="278.2181829783542" minHeight="10.0" prefHeight="278.2181829783542" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="450.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <JFXListView fx:id="lstMembers" onMouseClicked="#toConfirmed" prefHeight="278.0" prefWidth="477.0" GridPane.rowIndex="1">
+                  <JFXListView fx:id="lstMembers" onMouseClicked="#toConfirmed" prefHeight="358.0" prefWidth="279.0" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="50.0" right="50.0" />
+                        <Insets left="50.0" right="50.0" top="20.0" />
                      </GridPane.margin>
                   </JFXListView>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="leden">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="392.0" text="leden">
                      <font>
                         <Font size="13.0" />
                      </font>
                   </Label>
                   <JFXListView fx:id="lstConfirmed" onMouseClicked="#toMember" prefHeight="24.0" prefWidth="324.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="50.0" right="50.0" />
+                        <Insets left="50.0" right="50.0" top="20.0" />
                      </GridPane.margin>
                   </JFXListView>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Bevestigd" textAlignment="CENTER" GridPane.columnIndex="1">
+                  <Label alignment="CENTER" contentDisplay="RIGHT" prefHeight="39.0" prefWidth="392.0" text="Bevestigd" textAlignment="CENTER" GridPane.columnIndex="1">
                      <font>
                         <Font size="13.0" />
                      </font>
@@ -105,7 +105,12 @@
             </GridPane>
          </children>
       </VBox>
-      <JFXButton fx:id="btnAdd" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="454.0" layoutY="714.0" onAction="#addActivity" style="-fx-background-color: #336566;" text="Voeg Activiteit toe" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+      <JFXButton fx:id="btnEdit" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" disable="true" layoutX="276.0" layoutY="760.0" onMouseClicked="#edit" prefHeight="30.0" prefWidth="155.0" style="-fx-background-color: #336566;" text="Pas activteit aan" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="btnDelete" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" disable="true" layoutX="441.0" layoutY="760.0" onMouseClicked="#delete" prefHeight="30.0" prefWidth="155.0" style="-fx-background-color: #336566;" text="Verwijder activiteit" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
