--- a/Taijitan/src/gui/ListPanel.fxml
+++ b/Taijitan/src/gui/ListPanel.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="303.0" type="VBox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="775.0" prefWidth="303.0" type="VBox" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXButton fx:id="btnAdd" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" disable="true" onMouseClicked="#addUser" style="-fx-background-color: #336566;" text="Voeg lid toe" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+      <JFXButton fx:id="btnAdd" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" disable="true" onMouseClicked="#add" prefWidth="240.0" style="-fx-background-color: #336566;" text="Voeg lid toe" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
          <VBox.margin>
-            <Insets bottom="-140.0" left="125.0" top="100.0" />
+            <Insets left="50.0" right="10.0" top="40.0" />
          </VBox.margin>
       </JFXButton>
-      <JFXListView fx:id="lstItems" prefHeight="591.0" prefWidth="294.0" VBox.vgrow="ALWAYS">
+      <JFXListView fx:id="lstItems" prefHeight="664.0" prefWidth="242.0" VBox.vgrow="ALWAYS">
          <VBox.margin>
-            <Insets bottom="10.0" left="50.0" right="10.0" top="150.0" />
+            <Insets bottom="10.0" left="50.0" right="10.0" top="40.0" />
          </VBox.margin>
       </JFXListView>
    </children>
