--- a/Taijitan/src/gui/Activities.fxml
+++ b/Taijitan/src/gui/Activities.fxml
@@ -5,6 +5,7 @@
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTimePicker?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,14 +17,14 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="872.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="56.0" layoutY="31.0" prefHeight="711.0" prefWidth="783.0" spacing="30.0">
+      <VBox alignment="TOP_CENTER" layoutX="56.0" layoutY="31.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="711.0" prefWidth="783.0" spacing="30.0">
          <children>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="71.0" prefWidth="867.0" text="Activiteiten" textAlignment="CENTER" textFill="#336566">
                <font>
                   <Font name="System Bold" size="48.0" />
                </font>
             </Label>
-            <GridPane prefHeight="204.0" prefWidth="629.0">
+            <GridPane prefHeight="251.0" prefWidth="787.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="401.25456305890054" minWidth="10.0" prefWidth="241.54545661358804" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="573.1818091526505" minWidth="10.0" prefWidth="573.1818091526505" />
@@ -32,6 +33,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
@@ -61,22 +64,44 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Deelnemers" GridPane.rowIndex="4">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Deelnemers" GridPane.rowIndex="6">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <JFXDatePicker fx:id="dtmStart" defaultColor="#336566" prefHeight="29.0" prefWidth="718.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <JFXDatePicker fx:id="dtmEnd" defaultColor="#336566" prefHeight="29.0" prefWidth="583.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <JFXDatePicker fx:id="dtmStart" defaultColor="#336566" prefHeight="31.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <JFXDatePicker fx:id="dtmEnd" defaultColor="#336566" prefHeight="30.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <JFXComboBox fx:id="cboType" focusColor="#336566" prefHeight="27.0" prefWidth="569.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <Label fx:id="lblError" prefHeight="41.0" prefWidth="566.0" textFill="RED" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Score voor deelname" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtScore" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="349.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </JFXTextField>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="maximum aantal deelnemers" GridPane.rowIndex="5">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtMaxParticipants" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="157.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </JFXTextField>
+                  <JFXTimePicker fx:id="timeStart" prefHeight="29.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                  <JFXTimePicker fx:id="timeEnd" prefHeight="29.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane prefHeight="366.0" prefWidth="783.0">
+            <GridPane prefHeight="358.0" prefWidth="794.0">
               <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
