--- a/Taijitan/src/gui/ListPanel.fxml
+++ b/Taijitan/src/gui/ListPanel.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXListView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.VBox?>
@@ -16,9 +17,14 @@
             <Insets left="50.0" right="10.0" top="40.0" />
          </VBox.margin>
       </JFXButton>
+      <JFXComboBox fx:id="cboRank" focusColor="#336566" prefHeight="26.0" prefWidth="240.0" promptText="Alle rangen" visible="false">
+         <VBox.margin>
+            <Insets left="50.0" top="20.0" />
+         </VBox.margin>
+      </JFXComboBox>
       <JFXListView fx:id="lstItems" prefHeight="664.0" prefWidth="242.0" VBox.vgrow="ALWAYS">
          <VBox.margin>
-            <Insets bottom="10.0" left="50.0" right="10.0" top="40.0" />
+            <Insets bottom="10.0" left="50.0" right="10.0" top="20.0" />
          </VBox.margin>
       </JFXListView>
    </children>
