--- a/Taijitan/src/gui/Activities.fxml
+++ b/Taijitan/src/gui/Activities.fxml
@@ -148,5 +148,10 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </JFXButton>
+      <JFXButton fx:id="btnTerug" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="30.0" layoutY="760.0" onAction="#terug" onMouseClicked="#edit" prefHeight="19.0" prefWidth="104.0" style="-fx-background-color: #336566;" text="Terug" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS" visible="false">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXButton>
    </children>
 </fx:root>
