--- a/Taijitan/src/gui/Activities.fxml
+++ b/Taijitan/src/gui/Activities.fxml
@@ -24,12 +24,13 @@
                   <Font name="System Bold" size="48.0" />
                </font>
             </Label>
-            <GridPane prefHeight="251.0" prefWidth="787.0">
+            <GridPane prefHeight="275.0" prefWidth="783.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="401.25456305890054" minWidth="10.0" prefWidth="241.54545661358804" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="573.1818091526505" minWidth="10.0" prefWidth="573.1818091526505" />
               </columnConstraints>
               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -39,66 +40,66 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Naam">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Naam" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="txtName" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="157.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1">
+                  <JFXTextField fx:id="txtName" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="157.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </JFXTextField>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Start" GridPane.rowIndex="1">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Start" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Einde" GridPane.rowIndex="2">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Einde" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Type" GridPane.rowIndex="3">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Type" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Deelnemers" GridPane.rowIndex="6">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Deelnemers" GridPane.rowIndex="7">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <JFXDatePicker fx:id="dtmStart" defaultColor="#336566" prefHeight="31.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <JFXDatePicker fx:id="dtmEnd" defaultColor="#336566" prefHeight="30.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <JFXComboBox fx:id="cboType" focusColor="#336566" prefHeight="27.0" prefWidth="569.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label fx:id="lblError" prefHeight="41.0" prefWidth="566.0" textFill="RED" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                  <JFXDatePicker fx:id="dtmStart" defaultColor="#336566" prefHeight="31.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <JFXDatePicker fx:id="dtmEnd" defaultColor="#336566" prefHeight="30.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <JFXComboBox fx:id="cboType" focusColor="#336566" prefHeight="27.0" prefWidth="569.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label fx:id="lblError" prefHeight="41.0" prefWidth="566.0" textFill="RED" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Score voor deelname" GridPane.rowIndex="4">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Score voor deelname" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="txtScore" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="349.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                  <JFXTextField fx:id="txtScore" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="349.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </JFXTextField>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="maximum aantal deelnemers" GridPane.rowIndex="5">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="maximum aantal deelnemers" GridPane.rowIndex="6">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="txtMaxParticipants" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="157.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                  <JFXTextField fx:id="txtMaxParticipants" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="157.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="6">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTimePicker fx:id="timeStart" defaultColor="#336566" prefHeight="29.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                  <JFXTimePicker fx:id="timeEnd" defaultColor="#336566" prefHeight="29.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                  <JFXTimePicker fx:id="timeStart" defaultColor="#336566" prefHeight="29.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                  <JFXTimePicker fx:id="timeEnd" defaultColor="#336566" prefHeight="29.0" prefWidth="275.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
                </children>
             </GridPane>
             <GridPane prefHeight="358.0" prefWidth="794.0">
