--- a/Taijitan/src/gui/Scorebord.fxml
+++ b/Taijitan/src/gui/Scorebord.fxml
@@ -1,19 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="1234.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="815.0" prefWidth="872.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="56.0" layoutY="31.0" prefHeight="711.0" prefWidth="1125.0" spacing="30.0">
+      <VBox alignment="TOP_CENTER" layoutX="66.0" layoutY="41.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="711.0" prefWidth="783.0" spacing="30.0">
          <children>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="71.0" prefWidth="867.0" text="Scorebord" textAlignment="CENTER" textFill="#336566">
                <font>
                   <Font name="System Bold" size="48.0" />
                </font>
             </Label>
+            <GridPane prefHeight="151.0" prefWidth="783.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="401.25456305890054" minWidth="10.0" prefWidth="241.54545661358804" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="573.1818091526505" minWidth="10.0" prefWidth="573.1818091526505" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Naam">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtName" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="157.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </JFXTextField>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Lid" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Score " GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtScore" alignment="TOP_LEFT" focusColor="#336566" prefHeight="30.0" prefWidth="349.0" style="-fx-text-fill: #336566;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </JFXTextField>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" text="Type" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXComboBox fx:id="cboType" focusColor="#336566" prefHeight="27.0" prefWidth="569.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
          </children>
       </VBox>
    </children>
